Better JDK-18 EA (and beyond) support of SecurityManager (#1750)
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>